# pam_mkslurmuser

./: CMakeLists.txt  Dockerfile.deb  Dockerfile.rpm  LICENSE  README.md  package.cmake
.github/workflows/: main.yml
cmake/modules/: FindPAM.cmake
src/: pam_mkslurmuser.c
